Fix click event for constant buttons

It looks like the new style of "connect" tries to use the clicked
signal as defined inside the function, which does not trigger
slotClicked(). This change explicitly use the clicked signal from
the (grand)parent class and the expected chain of signal/slots
triggering is restored.

BUG: 353644
REVIEW: 127017
FIXED-IN: 15.12.3